# model_framework

./: .gitignore  .pre-commit-config.yaml  README.md  demo_config.toml  dev_nb.ipynb  pipeline_run.ipynb  pyrightconfig.json
demo_package/: README.md
demo_package/src/BoEModels/: utils.py
mlflow/: start_mlflow_server.sh
model_package/: README.md  pyproject.toml
model_package/src/DummyBKKModel/: model.py
wrapper/: boe_wrapper.py
wrapper_package/: pyproject.toml
