[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BoEModels"
version = "0.0.1"
authors = [
  { name="Lukas Alemu", email="lukas.alemu@bankofengland.co.uk" },
]
description = "Demo package for the Future Modelling Capability"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
